# Proposal_analyzer

./: Methodology_Notebook.ipynb  README.md  main.py  pyproject.toml  requirements.txt
other_pages/: doc_compare.py
vectorstore/RFP/: index.faiss  index.pkl
